Update for move to laptop
Signed-off-by: Cameron Barnes <cameron_barnes@outlook.com>